--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser": "^9.1.11",
     "@angular/platform-browser-dynamic": "^9.1.11",
     "@angular/router": "^9.1.11",
+    "@ngrx/store": "^9.2.0",
     "@popperjs/core": "^2.4.2",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "firebase": "^7.16.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "mongodb": "^3.5.9",
