--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/my-theme.scss"
             ],
             "scripts": []
           },
@@ -90,7 +91,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/my-theme.scss"
             ],
             "scripts": []
           }
