--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "mongodb": "^3.5.9",
@@ -11,7 +12,6 @@
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
-
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 9.1.7.",
   "main": "karma.conf.js",
   "author": "",
